--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "ThirdParty/etl"]
-	path = ThirdParty/etl
+[submodule "third_party/etl"]
+	path = third_party/etl
 	url = https://github.com/ETLCPP/etl
