--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=IntroSatLib
 version=0.0.20
 author=Dolgoarshinnykh Almaz
 maintainer=Dolgoarshinnykh Almaz
-sentence=
+sentence=Библиотека для работы с учебным конструктором IntroSat
 paragraph=
 category=Device Control
-url=
+url=https://github.com/Obu-IntroSat/IntroSatLib
 architectures=stm32
