--- a/library.properties
+++ b/library.properties
@@ -2,7 +2,7 @@ name=IntroSatLib
 version=0.0.20
 author=Dolgoarshinnykh Almaz
 maintainer=Dolgoarshinnykh Almaz
-sentence=Библиотека для работы с учебным конструктором IntroSat
+sentence=Library for educational satellite kit IntroSat
 paragraph=
 category=Device Control
 url=https://github.com/Obu-IntroSat/IntroSatLib
